--- a/app/assets/stylesheets/applications.scss
+++ b/app/assets/stylesheets/applications.scss
@@ -17,7 +17,7 @@ body{
 }
 
 .confirm_header {
-  color: #FFFFFF;
+  color:#C0C0C0;
   font-size: 300%;
 }
 
@@ -71,7 +71,7 @@ ul.child li a{
   margin-right: -5px;
   margin-bottom: -5px;
   display: block;
-  color: #fff;
+  color: #C0C0C0;
 }
 
 .application_content {
