--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,14 +43,27 @@
     <%= yield %>
 
     <br>
-    <div align="center">
-      <div class="footer">
-        <table>
-          <tr>
-            <td><%= link_to 'TOP', items_path %></td>
-          </tr>
-        </table>
-      </div>
 
+    <% if browser.device.mobile? %>
+      <div align="center">
+        <div class="footer">
+          <table>
+            <tr>
+              <td><%= link_to 'TOP', items_path %></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    <% else %>
+      <div class="row">
+        <!-- 共通タイトル -->
+        <div class="col-md-3 col-xs-3 header_pc">NAGOYA FIRST ONE GROUP</div>
+        <div class="col-md-2 col-xs-2 header_pc link"><%= link_to 'CONCEPT', controller: 'concepts', action: 'index'%></div>
+        <div class="col-md-1 col-xs-1 header_pc link sp"><%= link_to '待遇', controller: 'treatments', action: 'index'%></div>
+        <div class="col-md-2 col-xs-2 header_pc link under"><%= link_to '募集要項', controller: 'requirements', action: 'index'%></div>
+        <div class="col-md-2 col-xs-2 header_pc link"><%= link_to '入店までの流れ', controller: 'flows', action: 'index'%></div>
+        <div class="col-md-2 col-xs-2 header_pc link"><%= link_to '応募フォーム', controller: 'applications', action: 'index'%></div>
+      </div>
+    <% end %>
   </body>
 </html>
